Remove deprecations